# EchoChain

./: .env  .eslintrc.json  .gitignore  .gitmodules  CONTEXT.md  Cargo.toml  EchoChain_Documentation_and_Development_Plan.md  PROGRESS.md  README.md  audio_hybrid_service.py  dejavu.sqllite.cnf  docker-compose.yml  jest.config.js  package-lock.json  package.json  polkaSK dpcs.html
.github/workflows/: ci.yml  main.yml  update-cs.yml
.roo/rules/: byterover-rules.md
App/: package-lock.json  package.json  vite.config.ts
App/electron/: main.js
App/src/: App.tsx  main.tsx
Backend_API_Services/: .eslintrc.json  .gitignore  Dockerfile  README.md  jest.config.js  openapi.yaml  openapi_improvements.md  ormconfig.json  package-lock.json  package.json  tsconfig.json
Backend_API_Services/LandingPage/: index.html
Backend_API_Services/src/: copyright.ts  data-source.ts  db.ts  (+7 more)
Blockchain/: .env.example  Cargo.toml  INTEGRATION_PLAN.md  README.md  royalty_distribution_spec.md
Blockchain/Blockchain_GUI/: README.md  package-lock.json  package.json
Blockchain/Blockchain_GUI/src/: App.js  index.css
Blockchain/Blockchain_GUI/src/components/: AccountStatus.js  CommissionPost.js  CommissionSelection.js  CommissionSubmissions.js  Faucet.js  Home.js  LoadingSpinner.js  NodeConnection.js  SampleUpload.js  Settings.js  Tests.js  Transfers.js  UserSamples.js
Blockchain/Blockchain_GUI/src/contexts/: AccountContext.js  NotificationContext.js
Blockchain/Blockchain_GUI/src/services/: blockchainService.js  commissionService.js  sampleService.js
Blockchain/contracts/flipper/: Cargo.toml  lib.rs
Blockchain/echochain-node/: Dockerfile  README.md  docker-compose-testnet.yml
Blockchain/echochain-node/docs/: SECURITY_FIXES.md  privacy_solutions_plan.md  rust-setup.md
Blockchain/echochain-node/node/: ._target  Cargo.toml
Blockchain/echochain-node/node/src/: chain_spec.rs
Blockchain/echochain-node/pallets/asset-registry/src/: lib.rs  tests.rs  types.rs
Blockchain/echochain-node/pallets/content-rewards/: Cargo.toml
Blockchain/echochain-node/pallets/content-rewards/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
Blockchain/echochain-node/pallets/echochain-compute/: Cargo.toml
Blockchain/echochain-node/pallets/echochain-compute/src/: benchmarking.rs  hooks.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
Blockchain/echochain-node/pallets/echochain-compute/src/zkp/: mod.rs
Blockchain/echochain-node/pallets/echochain-marketplace/: Cargo.toml
Blockchain/echochain-node/pallets/echochain-marketplace/src/: benchmarking.rs  error.rs  functions.rs  hooks.rs  lib.rs  match_checker.rs  migration.rs  mock.rs  payments.rs  security_tests.rs  stub.rs  tests.rs  traits.rs  types.rs  utils.rs  weights.rs
Blockchain/echochain-node/pallets/governance/: Cargo.toml
Blockchain/echochain-node/pallets/governance/src/: lib.rs
Blockchain/echochain-node/pallets/network-rewards/: Cargo.toml
Blockchain/echochain-node/pallets/network-rewards/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
Blockchain/echochain-node/pallets/p2p-integration/: Cargo.toml
Blockchain/echochain-node/pallets/p2p-integration/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
Blockchain/echochain-node/pallets/proof-of-contribution/: Cargo.toml
Blockchain/echochain-node/pallets/proof-of-contribution/src/: lib.rs
Blockchain/echochain-node/pallets/rewards/src/: lib.rs
Blockchain/echochain-node/pallets/royalty-distribution/: Cargo.toml
Blockchain/echochain-node/pallets/royalty-distribution/src/: lib.rs  tests.rs
Blockchain/echochain-node/pallets/sample-registry/: Cargo.toml
Blockchain/echochain-node/pallets/sample-registry/src/: benchmarking.rs  lib.rs  mock.rs  security_tests.rs  tests.rs
Blockchain/echochain-node/pallets/template/: Cargo.toml  README.md
Blockchain/echochain-node/runtime/: Cargo.toml
Blockchain/echochain-node/runtime/src/: lib.rs  migrations.rs
Blockchain/echochain-node/scripts/: deploy-and-fund.js  run-local-testnet.sh
Blockchain/echochain-node/tests/: blockchain_transactions.feature  p2p_file_transfer.feature
Blockchain/pallets/governance/: Cargo.toml
Blockchain/pallets/p2p-integration/: Cargo.toml
Blockchain/pallets/p2p-integration/src/: lib.rs
Blockchain/pallets/proof-of-contribution/: Cargo.toml
Blockchain/pallets/proof-of-contribution/src/: lib.rs
Blockchain/polkadot-sdk/polkadot/node/service/chain-specs/: ._rococo.json
Blockchain/src/: block.rs  lib.rs
Blockchain_GUI/: package.json
Landing Page/: README.md
LandingPage/: .gitignore  README.md  cypress.config.js  index.html
P2P_File_Sharing_System/: .gitignore  P2PClient_Usage_Examples.md  README.md  api.py  audio_analysis.py  audio_hybrid_service.py  blockchain.py  copyright_detection.py  dht.py  file_manager.py  networking.py  node.py  p2p_client.py  p2p_client_nodejs.js  p2p_http_api.py  p2p_node.py  package.json  requirements.txt  security.py  test_audio_integration.py  test_copyright_detection.py
Sample Browser App/: README.md
cline_docs/: GUI_Integration_Plan.md  codebaseSummary.md  currentTask.md  projectRoadmap.md  techStack.md
docs/: ACURAST_MODULES_MAPPING.md  BlockchainClient.md  BlockchainMusicFeatures.md  CODEBASE_INDEX.md  DEVELOPMENT_PLAN_INDEX.md  DEVELOPMENT_PROGRESS.md  EchoChain_Documentation_and_Development_Plan.md  EchoChain_Node_Deployment_Architecture.md  OPTIMIZATION_SUMMARY.md  OpenSource_Integration_Plan.md  P2P_Blockchain_Integration_FixLog.md  P2P_Blockchain_Integration_Plan.md  PROGRESS.md  README.md  README.template.md  architecture.md  asyncapi.yaml  byterover-knowledge.md  content-rewards-pallet.md  echochain-blockchain.md  git-error-1751228185196  governance_decisions.md  hosting-plan.md  network-rewards-pallet.md  remaining-todos.md
isolated-echochain-compute/: Cargo.toml
macOS_Application/: .gitignore  Development_Plan.md  README.md
polkaSK dpcs_files/: latest.js
schemas/: sample-metadata.schema.json
scripts/: claim-rewards.sh  dev-build-all.sh  dev-clean.sh  dev-start-all.sh  dev-test-all.sh  distribute-network-rewards.sh  submit-network-report.sh
(+118 files in other folders)
