[package]
name = "echochain-node"
version = "0.1.0"
edition = "2021"
authors = ["EchoChain Team"]
description = "Substrate-based blockchain for EchoChain music sample sharing platform"

[dependencies]
# Substrate core dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Pallets
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# EchoChain custom pallets
pallet-proof-of-contribution = { path = "./pallets/proof-of-contribution", default-features = false }
pallet-sample-registry = { path = "echochain-node/pallets/sample-registry", default-features = false }
pallet-p2p-integration = { path = "./pallets/p2p-integration", default-features = false }
pallet-governance = { path = "./pallets/governance", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-proof-of-contribution/std",
    "pallet-sample-registry/std",
    "pallet-p2p-integration/std",
    "pallet-governance/std",
]
