[package]
name = "flipper"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "4.0.0", default-features = false }

[lib]
name = "flipper"
path = "lib.rs"
crate-type = [
    "std", # For compiling to native code (for testing)
    "cdylib", # For compiling to wasm (for deployment)
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []