[package]
name = "echochain-node"
version = "4.0.0-dev"
description = "EchoChain: A Decentralized Music Sample Marketplace blockchain node."
authors = ["EchoChain Team <info@echochain.xyz>"]
homepage = "https://echochain.xyz/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/echochain/echochain-node/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "echochain-node"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}

sc-cli = { version = "0.10.0-dev", path = "../../substrate/client/cli" }
sp-core = { version = "21.0.0", path = "../../substrate/primitives/core" }
sc-executor = { version = "0.10.0-dev", path = "../../substrate/client/executor" }
sc-network = { version = "0.10.0-dev", path = "../../substrate/client/network" }
sc-service = { version = "0.10.0-dev", path = "../../substrate/client/service" }
sc-telemetry = { version = "4.0.0-dev", path = "../../substrate/client/telemetry" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool/api" }
sc-offchain = { version = "4.0.0-dev", path = "../../substrate/client/offchain" }
sc-consensus-aura = { version = "0.10.0-dev", path = "../../substrate/client/consensus/aura" }
sp-consensus-aura = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/aura" }
sc-consensus = { version = "0.10.0-dev", path = "../../substrate/client/consensus/common" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

# Local Dependencies
echochain-node-runtime = { version = "4.0.0-dev", path = "../runtime" }

# CLI-specific dependencies


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"echochain-node-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.

