[package]
name = "echochain-node"
version = "4.0.0-dev"
description = "EchoChain: A Decentralized Music Sample Marketplace blockchain node."
authors = ["EchoChain Team <info@echochain.xyz>"]
homepage = "https://echochain.xyz/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/echochain/echochain-node/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "echochain-node"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}

sc-cli = { version = "0.10.0-dev", path = "../../substrate/client/cli" }
sp-core = { version = "21.0.0", path = "../../substrate/primitives/core" }
sc-executor = { version = "0.10.0-dev", path = "../../substrate/client/executor" }
sc-network = { version = "0.10.0-dev", path = "../../substrate/client/network" }
sc-service = { version = "0.10.0-dev", path = "../../substrate/client/service" }
sc-telemetry = { version = "4.0.0-dev", path = "../../substrate/client/telemetry" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../../substrate/client/transaction-pool/api" }
sc-offchain = { version = "4.0.0-dev", path = "../../substrate/client/offchain" }
sc-consensus-aura = { version = "0.10.0-dev", path = "../../substrate/client/consensus/aura" }
sp-consensus-aura = { version = "0.10.0-dev", path = "../../substrate/primitives/consensus/aura" }
sc-consensus = { version = "0.10.0-dev", path = "../../substrate/client/consensus/common" }
sc-consensus-grandpa = { version = "0.10.0-dev", path = "../../substrate/client/consensus/grandpa" }
sp-consensus-grandpa = { version = "4.0.0-dev", path = "../../substrate/primitives/consensus/grandpa" }
sc-client-api = { version = "4.0.0-dev", path = "../../substrate/client/api" }
sp-runtime = { version = "24.0.0", path = "../../substrate/primitives/runtime" }
sp-io = { version = "23.0.0", path = "../../substrate/primitives/io" }
sp-timestamp = { version = "4.0.0-dev", path = "../../substrate/primitives/timestamp" }
sp-inherents = { version = "4.0.0-dev", path = "../../substrate/primitives/inherents" }
sp-keyring = { version = "24.0.0", path = "../../substrate/primitives/keyring" }
frame-system = { version = "4.0.0-dev", path = "../../substrate/frame/system" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, path = "../../substrate/frame/transaction-payment" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sp-api = { version = "4.0.0-dev", path = "../../substrate/primitives/api" }
sc-rpc-api = { version = "0.10.0-dev", path = "../../substrate/client/rpc-api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../substrate/primitives/blockchain" }
sp-block-builder = { version = "4.0.0-dev", path = "../../substrate/primitives/block-builder" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

# Local Dependencies
echochain-node-runtime = { version = "4.0.0-dev", path = "../runtime" }

# CLI-specific dependencies


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"echochain-node-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.

