[package]
name = "echochain-node"
version = "4.0.0-dev"
description = "EchoChain: A Decentralized Music Sample Marketplace blockchain node."
authors = ["EchoChain Team <info@echochain.xyz>"]
homepage = "https://echochain.xyz/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/echochain/echochain-node/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "echochain-node"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}

sc-cli = { version = "0.10.0", features = ["wasmtime"] }
sp-core = { version = "28.0.0" }
sc-executor = { version = "0.10.0", features = ["wasmtime"] }
sc-network = { version = "0.10.0" }
sc-service = { version = "0.10.0", features = ["wasmtime"] }
sc-telemetry = { version = "0.10.0" }
sc-transaction-pool = { version = "0.10.0" }
sc-transaction-pool-api = { version = "0.10.0" }
sc-offchain = { version = "0.10.0" }
sc-consensus-aura = { version = "0.10.0" }
sp-consensus-aura = { version = "0.10.0" }
sc-consensus = { version = "0.10.0" }
sc-consensus-grandpa = { version = "0.10.0" }
sp-consensus-grandpa = { version = "0.10.0" }
sc-client-api = { version = "0.10.0" }
sp-runtime = { version = "28.0.0" }
sp-io = { version = "28.0.0" }
sp-timestamp = { version = "28.0.0" }
sp-inherents = { version = "28.0.0" }
sp-keyring = { version = "28.0.0" }
frame-system = { version = "28.0.0" }
pallet-transaction-payment = { version = "28.0.0", default-features = false }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sp-api = { version = "28.0.0" }
sc-rpc-api = { version = "0.10.0" }
sp-blockchain = { version = "28.0.0" }
sp-block-builder = { version = "28.0.0" }
sc-basic-authorship = { version = "0.10.0" }
substrate-frame-rpc-system = { version = "0.10.0" }
pallet-transaction-payment-rpc = { version = "28.0.0" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "28.0.0" }
frame-benchmarking-cli = { version = "0.10.0" }

# Local Dependencies
echochain-node-runtime = { version = "4.0.0-dev", path = "../runtime" }

# CLI-specific dependencies


[build-dependencies]
substrate-build-script-utils = { version = "28.0.0" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"echochain-node-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.