[package]
name = "echochain-node-runtime"
version = "4.0.0-dev"
description = "The runtime for EchoChain blockchain."
authors = ["EchoChain Team <info@echochain.xyz>"]
homepage = "https://echochain.xyz/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/echochain/echochain-node/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

pallet-aura = { default-features = false, version = "28.0.0" }
pallet-balances = { default-features = false, version = "28.0.0" }
frame-support = { default-features = false, version = "28.0.0" }
pallet-grandpa = { default-features = false, version = "28.0.0" }
pallet-sudo = { default-features = false, version = "28.0.0" }
frame-system = { default-features = false, version = "28.0.0" }

pallet-timestamp = { default-features = false, version = "28.0.0" }
pallet-transaction-payment = { default-features = false, version = "28.0.0" }
pallet-sample-registry = { version = "4.0.0-dev", default-features = false, path = "../pallets/sample-registry" }
pallet-democracy = { default-features = false, version = "28.0.0" }
pallet-collective = { default-features = false, version = "28.0.0" }
pallet-treasury = { default-features = false, version = "28.0.0" }
pallet-scheduler = { default-features = false, version = "28.0.0" }
# pallet-proof-of-contribution = { version = "4.0.0-dev", default-features = false, path = "../pallets/proof-of-contribution" }
frame-executive = { default-features = false, version = "28.0.0" }
sp-api = { default-features = false, version = "28.0.0" }
sp-block-builder = { default-features = false, version = "28.0.0" }
sp-consensus-aura = { default-features = false, version = "0.10.0" }
sp-consensus-grandpa = { default-features = false, version = "0.10.0" }
sp-core = { default-features = false, version = "28.0.0" }
sp-inherents = { default-features = false, version = "28.0.0" }
sp-offchain = { default-features = false, version = "28.0.0" }
sp-runtime = { default-features = false, version = "28.0.0" }
sp-session = { default-features = false, version = "28.0.0" }
sp-std = { default-features = false, version = "28.0.0" }
sp-storage = { default-features = false, version = "28.0.0" }
sp-transaction-pool = { default-features = false, version = "28.0.0" }
sp-version = { default-features = false, version = "28.0.0" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, version = "28.0.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "28.0.0" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, version = "28.0.0", optional = true }
frame-system-benchmarking = { default-features = false, version = "28.0.0", optional = true }

# Local Dependencies
pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }

[build-dependencies]
substrate-wasm-builder = { version = "0.10.0", optional = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	
	
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-democracy/std",
	"pallet-collective/std",
	"pallet-treasury/std",
	
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-sample-registry/std",
	"pallet-scheduler/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

experimental = [ "pallet-aura/experimental" ]