[package]
name = "echochain-node-runtime"
version = "4.0.0-dev"
description = "The runtime for EchoChain blockchain - a decentralized music sample marketplace"
authors = ["EchoChain Team <info@echochain.xyz>"]
homepage = "https://echochain.xyz/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/echochain/echochain-node/"

# Version Compatibility
# - Requires Substrate v28.0.0 (FRAME v2)
# - Polkadot SDK compatibility: v0.9.42+
# - Rust toolchain: nightly-2023-10-01 or later

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Core encoding/decoding and type information
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

# FRAME Pallets (v28.0.0)
pallet-aura = { default-features = false, path = "../../polkadot-sdk/substrate/frame/aura" } # Block production
pallet-balances = { default-features = false, path = "../../polkadot-sdk/substrate/frame/balances" } # Accounts and transfers
frame-support = { default-features = false, path = "../../polkadot-sdk/substrate/frame/support" } # FRAME support library
pallet-grandpa = { default-features = false, path = "../../polkadot-sdk/substrate/frame/grandpa" } # Finality gadget
pallet-sudo = { default-features = false, path = "../../polkadot-sdk/substrate/frame/sudo" } # Root admin access
frame-system = { default-features = false, path = "../../polkadot-sdk/substrate/frame/system" } # Core system
pallet-contracts = { default-features = false, path = "../../polkadot-sdk/substrate/frame/contracts" } # Smart contract execution
pallet-xcm = { default-features = false, path = "../../polkadot-sdk/polkadot/xcm/pallet-xcm" } # XCM support
xcm-builder = { default-features = false, path = "../../polkadot-sdk/polkadot/xcm/xcm-builder" } # XCM configuration helpers

# Application-Specific Pallets
pallet-timestamp = { default-features = false, path = "../../polkadot-sdk/substrate/frame/timestamp" } # Block time tracking
pallet-transaction-payment = { default-features = false, path = "../../polkadot-sdk/substrate/frame/transaction-payment" } # Fee handling
pallet-democracy = { default-features = false, path = "../../polkadot-sdk/substrate/frame/democracy" } # On-chain governance
pallet-collective = { default-features = false, path = "../../polkadot-sdk/substrate/frame/collective" } # Council voting
pallet-treasury = { default-features = false, path = "../../polkadot-sdk/substrate/frame/treasury" } # Community funds
pallet-scheduler = { default-features = false, path = "../../polkadot-sdk/substrate/frame/scheduler" } # Task scheduling

# Custom EchoChain Pallets
pallet-sample-registry = { default-features = false, path = "../pallets/sample-registry" } # Audio sample tracking
pallet-content-rewards = { default-features = false, path = "../pallets/content-rewards" } # Creator rewards
pallet-network-rewards = { default-features = false, path = "../pallets/network-rewards" } # Node operator rewards
pallet-p2p-integration = { default-features = false, path = "../pallets/p2p-integration" } # File sharing
pallet-echochain-compute = { default-features = false, path = "../pallets/echochain-compute" } # Distributed compute
pallet-echochain-marketplace = { default-features = false, path = "../pallets/echochain-marketplace" } # Sample marketplace
pallet-proof-of-contribution = { default-features = false, path = "../pallets/proof-of-contribution" } # Proof of Contribution

# Substrate Primitives (v28.0.0)
frame-executive = { default-features = false, path = "../../polkadot-sdk/substrate/frame/executive" } # Runtime execution
sp-api = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/api" } # Runtime APIs
sp-block-builder = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/block-builder" } # Block construction
sp-consensus-aura = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/consensus/aura" } # Aura consensus
sp-consensus-grandpa = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/consensus/grandpa" } # Grandpa finality
sp-core = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/core" } # Core primitives
sp-inherents = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/inherents" } # Inherent data
sp-offchain = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/offchain" } # Offchain features
sp-runtime = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/runtime" } # Runtime primitives
sp-session = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/session" } # Session keys
sp-std = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/std" } # Standard library
sp-storage = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/storage" } # Storage utilities
sp-transaction-pool = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/transaction-pool" } # Transaction pool
sp-version = { default-features = false, path = "../../polkadot-sdk/substrate/primitives/version" } # Versioning

# RPC Support
frame-system-rpc-runtime-api = { default-features = false, path = "../../polkadot-sdk/substrate/frame/system/rpc/runtime-api" } # System RPCs
pallet-transaction-payment-rpc-runtime-api = { default-features = false, path = "../../polkadot-sdk/substrate/frame/transaction-payment/rpc/runtime-api" } # Payment RPCs

# Benchmarking (Optional)
frame-benchmarking = { default-features = false, optional = true, path = "../../polkadot-sdk/substrate/frame/benchmarking" } # Benchmark macros
frame-system-benchmarking = { default-features = false, optional = true, path = "../../polkadot-sdk/substrate/frame/system/benchmarking" } # System benchmarks

# Local Development
pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" } # Starter template

[build-dependencies]
substrate-wasm-builder = { version = "0.10.0", optional = true }

[features]
# Standard compilation target (native + WASM)
default = [ "std" ]

# Standard library support (native compilation)
std = [
	# Core dependencies
	"codec/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	
	# FRAME pallets
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-democracy/std",
	"pallet-collective/std",
	"pallet-treasury/std",
	
	# Application pallets
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-sample-registry/std",
	"pallet-content-rewards/std",
	"pallet-network-rewards/std",
	"pallet-p2p-integration/std",
	"pallet-echochain-compute/std",
	"pallet-echochain-marketplace/std",
	"pallet-scheduler/std",
	
	# Primitives
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	
	# Build tool
	"substrate-wasm-builder",
	"pallet-contracts/std",
	"pallet-xcm/std",
	"xcm-builder/std",
]

# Runtime benchmarking support
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

# Experimental features (unstable)
experimental = [ "pallet-aura/experimental" ] # Aura experimental improvements